@@ -3,8 +3,11 @@
   <PropertyGroup>
     <!-- Targeting even .NET Framework 4.6 is supported by KGySoft.Drawing.Core and would reference the .NET Standard 1.3 version of SkiaSharp but it may
          cause BadImageFormatException in SkiaSharp static constructors if the consumer must reference at least .NET Standard 2.0 (eg. the UnitTest project). -->
+    <TargetFrameworks>net462;netstandard2.0;netcoreapp3.0;net5.0</TargetFrameworks>
+    <!--<TargetFrameworks>net9.0</TargetFrameworks>-->
+
+    <!--All targets including the ones dropped from the NuGet package. The project still should be able to be compiled with all of them. -->
     <!--<TargetFrameworks>net462;netstandard2.0;netcoreapp2.0;netcoreapp3.0;net5.0</TargetFrameworks>-->
-    <TargetFrameworks>net9.0</TargetFrameworks>
 
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
